--- a/essays/static/index.html
+++ b/essays/static/index.html
@@ -56,10 +56,10 @@
           <h2 class="section-header">Computer Science</h2>
           <div class="col-md-12 col-lg-8 col-offset-lg-2">
               <div class="link-block">
-                  <h3><a href="zipper.html">
-                          Wherein I revisit Löb's theorem to compute
-                          2-dimensional fixed points and also hide out at a
-                          friend's house for a few days to avoid my bookie.
+                  <h3><a href="church.html">
+                          Wherein I define numbers, arithmetic, and basic data
+                          structures in JavaScript using the lambda calculus
+                          and proceed to BLOW YOUR MIND
                       </a></h3>
               </div>
               <div class="link-block">
@@ -102,14 +102,6 @@
                           Wherein I show how to use the Free monad to bring
                           type-safe, correct imperative programming to pure
                           functional languages.</a></h3>
-              </div>
-
-              <div class="link-block">
-                  <h3><a href="church.html">
-                          Wherein I construct arithmetic from the lambda
-                          calculus and thus prove it can calculate anything
-                          which can be calculated, and yet still miss my rent
-                          deadline.</a></h3>
               </div>
 
               <div class="link-block">
