somehow I lost the entry for the zipper article

--- a/essays/static/index.html
+++ b/essays/static/index.html
@@ -62,6 +62,16 @@
                           and proceed to BLOW YOUR MIND
                       </a></h3>
               </div>
+
+              <div class="link-block">
+                  <h3><a href="zipper.html">
+                          Wherein I use comonadic fixpoints to go back to the
+                          future to retrieve the results of interdependent,
+                          spreadsheet-like computations and cool my heels for a
+                          bit to get away from my bookie.
+                      </a></h3>
+              </div>
+
               <div class="link-block">
                   <h3><a href="loeb.html">
                           Wherein I use Löb's theorem to compute inverted
