tubes link on home page was broken

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <p>
             I've been working on a stream-processing library for Haskell,
             called <a
-                              href=http://hackage.haskell.org/package/tubes">tubes</a>.
+                              href="http://hackage.haskell.org/package/tubes">tubes</a>.
             Using two new commands, <em>yield</em> and
             <em>await</em>, you
             can write reusable processing units called "tubes" and then connect
