--- a/essays/static/index.html
+++ b/essays/static/index.html
@@ -56,6 +56,14 @@
           <h2 class="section-header">Computer Science</h2>
           <div class="col-md-12 col-lg-8 col-offset-lg-2">
               <div class="link-block">
+                  <h3><a href="lists.html">
+                          Wherein I construct a list data structure based on
+                          Church encodings, implement list transformation
+                          functions in terms of list destruction, and invent
+                          list comprehensions from scratch in less than 20
+                          lines of JavaScript all the while finally digging
+                          that glass out of my foot from middle school.
+              <div class="link-block">
                   <h3><a href="church.html">
                           Wherein I define numbers, arithmetic, and basic data
                           structures in JavaScript using the lambda calculus
