essay index fuckup

--- a/essays/index.html
+++ b/essays/index.html
@@ -63,6 +63,8 @@
                           list comprehensions from scratch in less than 20
                           lines of JavaScript all the while finally digging
                           that glass out of my foot from middle school.
+                  </h3></a>
+              </div>
               <div class="link-block">
                   <h3><a href="church.html">
                           Wherein I define numbers, arithmetic, and basic data
