gave the list essay a proper title

--- a/essays/lists.html
+++ b/essays/lists.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
 
     <title>
-Untitled List Essay
+Everything you always wanted to know about lists, but were afraid to ask
 | Gatlin Johnson</title>
 
     <!-- Merriweather font -->
@@ -72,7 +72,7 @@ code > span.er { font-weight: bold; }
       </ol>
       <div class="page-header col-md-12 col-lg-10 col-lg-offset-1">
         <h1>
-Untitled List Essay
+Everything you always wanted to know about lists, but were afraid to ask
         </h1>
         <p class="lead">
 Or, how we are ultimately defined by our self-destruction
