lists essay proofreading

--- a/essays/lists.html
+++ b/essays/lists.html
@@ -224,8 +224,8 @@ Or, how we are ultimately defined by our self-destruction
 <p>There are several places to go from here, which I hope to write about soon:</p>
 <ul>
 <li>Creating and processing <em>infinite</em> lists;</li>
-<li>Deriving <code>flatMap</code> for other structures and</li>
-<li>Splitting a list into its first element (“head”) and rest (“tail”), based on Church numeral <em>subtraction</em>;</li>
+<li>Deriving <code>flatMap</code> and comprehensions for other structures;</li>
+<li>Splitting a list into its first element (“head”) and rest (“tail”), based on Church numeral <em>subtraction</em>; and</li>
 <li>honestly, I shouldn’t promise too much just yet.</li>
 </ul>
 <p>This is a lot of weird, more-than-likely new stuff. Play with the code. It won’t make sense all at once but it might help you begin to think about how you design and implement programs in a different way.</p>
