added references to repl.it

--- a/essays/lists.html
+++ b/essays/lists.html
@@ -100,6 +100,7 @@ Or, how we are ultimately defined by our self-destruction
       <div class="row">
         <div id="content" class="col-md-12 col-lg-10 col-lg-offset-1">
 <p>If you just want the code from this essay, it’s pretty short and <a href="https://gist.github.com/gatlin/5b022bc38aa9f5a2b63a75580a056e8c">available as a gist</a>.</p>
+<p>If you want to play along at home you can play with all this code <a href="https://repl.it/languages/javascript">in your browser using repl.it</a>.</p>
 <h1 id="last-time-on-gatlins-boring-essays"><span class="header-section-number">1</span> Last time, on Gatlin’s Boring Essays …</h1>
 <p>This essay is the followup to a <a href="http://niltag.net/essays/church.html">previous essay on Church numerals and lambda calculus</a>. If you aren’t a little familiar with those topics or just want to know where this essay is picking up I personally wouldn’t mind if you went and read it first.</p>
 <p>Go ahead; I’ll wait. :)</p>
