updated resume and front page

--- a/index.html
+++ b/index.html
@@ -83,11 +83,18 @@
               gists, which you may find illuminating</a>.
           </p>
 
+          <h4>Essays</h4>
+          <p>
+          I occasionally <a href="/essays/">
+              talk to myself in writing.</a> Currently working on
+              posting more of it here. Mostly going to be computer science
+              essays.</p>
+          <!--
           <h4>Pursue me on tumblr!</h4>
           <p>
             <a href="http://gatlin.tumblr.com">I really hope you like pugs.</a>
           </p>
-
+          -->
           <h4>Send me a boring old email.</h4>
           <p>
             Drop me a line at
@@ -112,12 +119,13 @@
           </p>
         </div>
         <div class="col-lg-6">
-            <h4>Essays</h4>
+            <h4>Hire me!</h4>
             <p>
-            I occasionally <a href="/essays/">
-                talk to myself in writing.</a> Currently working on
-                posting more of it here. Mostly going to be computer science
-                essays.</p>
+            I like to touch computers and make them do things! Do you want to
+            trade capital for computer-touching labor?
+            Then check out this <a href="resume.pdf">totally boss resume of
+                mine</a> and get back to me! More exclamation points!
+            </p>
             <h4>tubes</h4>
             <p>
             I've been working on a stream-processing library for Haskell,
