--- a/essays/index.html
+++ b/essays/index.html
@@ -56,6 +56,12 @@
           <h2 class="section-header">Computer Science</h2>
           <div class="col-md-12 col-lg-8 col-offset-lg-2">
               <div class="link-block">
+                  <h3><a href="ot.html">
+                          Wherein I construct a language and interpreter for
+                          document edits in preparation for an operational
+                          transform algorithm and finally emotionally process
+                          the idea that forgiveness is fundamentally a choice.
+                  </h3><a/>
                   <h3><a href="lists.html">
                           Wherein I construct a list data structure based on
                           Church encodings, implement list transformation
