added ot article PART 2

--- a/essays/index.html
+++ b/essays/index.html
@@ -55,13 +55,21 @@
       <div class="row">
           <h2 class="section-header">Computer Science</h2>
           <div class="col-md-12 col-lg-8 col-offset-lg-2">
-              <div class="link-block">
+            <div class="link-block">
+
+              <h3>
+                <a href="ot2.html">
+                  Wherein I complete my symphony of tedium started in the
+                  previous article and implement the heart of operational
+                  transformation, in between eternities of crippling silence
+                  from what I used to believe was a loving God in response to my
+                  cries for help.</a></h3>
                   <h3><a href="ot.html">
                           Wherein I construct a language and interpreter for
                           document edits in preparation for an operational
                           transform algorithm and finally emotionally process
                           the idea that forgiveness is fundamentally a choice.
-                  </h3><a/>
+                  </a><h3/>
                   <h3><a href="lists.html">
                           Wherein I construct a list data structure based on
                           Church encodings, implement list transformation
@@ -69,7 +77,7 @@
                           list comprehensions from scratch in less than 20
                           lines of JavaScript all the while finally digging
                           that glass out of my foot from middle school.
-                  </h3></a>
+                  </a></h3>
               </div>
               <div class="link-block">
                   <h3><a href="church.html">
