--- a/essays/racket_monad.html
+++ b/essays/racket_monad.html
@@ -93,12 +93,7 @@ Or: drinking alone isn’t healthy
 
       <div class="row">
         <div id="content" class="col-md-12 col-lg-10 col-lg-offset-1">
-<p><em>This post was updated from the original; feel free to send me feedback at <script type="text/javascript">
-<!--
-h='&#110;&#x69;&#108;&#116;&#x61;&#x67;&#46;&#110;&#x65;&#116;';a='&#64;';n='&#x67;&#x61;&#116;&#108;&#x69;&#110;';e=n+a+h;
-document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\/'+'a'+'>');
-// -->
-</script><noscript>&#x67;&#x61;&#116;&#108;&#x69;&#110;&#32;&#x61;&#116;&#32;&#110;&#x69;&#108;&#116;&#x61;&#x67;&#32;&#100;&#x6f;&#116;&#32;&#110;&#x65;&#116;</noscript> !</em></p>
+<p><em>This post was updated from the original; feel free to send me feedback at <a href="mailto:gatlin@niltag.net">gatlin@niltag.net</a> !</em></p>
 <p>Monads are difficult to explain without sounding condescending. There’s a lot of anxiety around the topic which compounds the already-significant barriers to entry: namely abstraction, vocabulary, and dependence on other ideas ideas you didn’t ask about.</p>
 <p>Instead, I’ll frame a problem and piece-by-piece solve the problem with what will turn out to be a monad.</p>
 <p>This post is written in <a href="http://docs.racket-lang.org/ts-guide/index.html">Typed Racket</a> which you can download for free at <a href="http://racket-lang.org">the Racket website</a>.</p>
