--- a/essays/index.html
+++ b/essays/index.html
@@ -56,6 +56,15 @@
           <h2 class="section-header">Computer Science</h2>
           <div class="col-md-12 col-lg-8 col-offset-lg-2">
               <div class="link-block">
+                  <h3><a href="pid.html">
+                          Wherein I motivate and implement a streaming PID
+                          controller in Haskell using arrows and my bespoke
+                          tubes library, ignorant of my own impending decay and
+                          the infinite shrieking silence that awaits us all.
+                      </a></h3>
+              </div>
+
+              <div class="link-block">
                   <h3><a href="lists.html">
                           Wherein I construct a list data structure based on
                           Church encodings, implement list transformation
