--- a/essays/recursion.html
+++ b/essays/recursion.html
@@ -260,7 +260,12 @@ Recursion
 <p>And that’s what the body of <code>fact-sort-of</code> becomes.</p>
 <p><code>function-fucker</code> has an actual name. A fellow named <a href="http://en.wikipedia.org/wiki/Fixed-point_combinator">Haskell Curry</a> drummed it up, and it’s called the <strong>Y combinator</strong> (“combinator” is a fancy word for “function with one argument you ignorant pigfucker”).</p>
 <p>Its name derives from the two identical lambda functions. Cute, huh?</p>
-<p>xoxo Gatlin <a href="mailto:gatlin@niltag.net">gatlin@niltag.net</a></p>
+<p>xoxo Gatlin <script type="text/javascript">
+<!--
+h='&#110;&#x69;&#108;&#116;&#x61;&#x67;&#46;&#110;&#x65;&#116;';a='&#64;';n='&#x67;&#x61;&#116;&#108;&#x69;&#110;';e=n+a+h;
+document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\/'+'a'+'>');
+// -->
+</script><noscript>&#x67;&#x61;&#116;&#108;&#x69;&#110;&#32;&#x61;&#116;&#32;&#110;&#x69;&#108;&#116;&#x61;&#x67;&#32;&#100;&#x6f;&#116;&#32;&#110;&#x65;&#116;</noscript></p>
 <section class="footnotes">
 <hr />
 <ol>
