--- a/essays/index.html
+++ b/essays/index.html
@@ -64,7 +64,6 @@
                       </a></h3>
               </div>
 
-              <div class="link-block">
             <div class="link-block">
 
               <h3>
@@ -74,12 +73,16 @@
                   transformation, in between eternities of crippling silence
                   from what I used to believe was a loving God in response to my
                   cries for help.</a></h3>
+              </div>
+              <div class="link-block">
                   <h3><a href="ot.html">
                           Wherein I construct a language and interpreter for
                           document edits in preparation for an operational
                           transform algorithm and finally emotionally process
                           the idea that forgiveness is fundamentally a choice.
                   </a><h3/>
+              </div>
+              <div class="link-block">
                   <h3><a href="lists.html">
                           Wherein I construct a list data structure based on
                           Church encodings, implement list transformation
