--- a/essays/billing.html
+++ b/essays/billing.html
@@ -241,12 +241,7 @@ middleware <span class="fu">=</span> logStdout</code></pre></div>
 <p>So, that's more or less the first version of my little payment gateway. I successfully charged myself a dollar, which after Stripe's 2.9% + $0.30 commission, will leave me with $0.67 in about 7 days.</p>
 <p>The reason the port number is read from the system environment is so that I can interface with Heroku. They decide dynamically what port to assign your application and it's easier for everyone if you just read it from the environment. Don't ask questions.</p>
 <p>I'm pretty happy with this. I learned quite a bit about the fundamentals of Haskell web applications, monad transformers, and the nightmare that was <code>ByteString</code> (which I didn't have the energy to write about, frankly).</p>
-<p>If you have any comments or questions, please email me at <script type="text/javascript">
-<!--
-h='&#110;&#x69;&#108;&#116;&#x61;&#x67;&#46;&#110;&#x65;&#116;';a='&#64;';n='&#x67;&#x61;&#116;&#108;&#x69;&#110;';e=n+a+h;
-document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\/'+'a'+'>');
-// -->
-</script><noscript>&#x67;&#x61;&#116;&#108;&#x69;&#110;&#32;&#x61;&#116;&#32;&#110;&#x69;&#108;&#116;&#x61;&#x67;&#32;&#100;&#x6f;&#116;&#32;&#110;&#x65;&#116;</noscript>.</p>
+<p>If you have any comments or questions, please email me at <a href="mailto:gatlin@niltag.net">gatlin@niltag.net</a>.</p>
         </div>
 </div><!-- row -->
 <hr>
