twitter monad article

--- a/essays/index.html
+++ b/essays/index.html
@@ -56,6 +56,16 @@
           <h2 class="section-header">Computer Science</h2>
           <div class="col-md-12 col-lg-8 col-offset-lg-2">
               <div class="link-block">
+                  <h3><a href="twittermonad.html">
+                          Wherein I implement a DSL for interacting with the
+                          Twitter API and use that to gently introduce the
+                          reader to monad transformers, knowing full well that
+                          nothing will ever bring back Harambe and that the
+                          little bit of light left on this Earth will only
+                          follow his lead soon enough.
+                      </a></h3>
+              </div>
+              <div class="link-block">
                   <h3><a href="pid.html">
                           Wherein I motivate and implement a streaming PID
                           controller in Haskell using arrows and my bespoke
