--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 
           <h4>Tail me on Instagram!</h4>
           <p>
-            I'm a bit upset I couldn't swing my name
-            <a href="https://instagram.com/gatlincj">but @gatlincj will do.</a>
+            <a href="https://instagram.com/askeletism">skeletons aren't
+                real.</a>
           </p>
         </div>
         <div class="col-lg-6">
