--- a/gainratio/index.html
+++ b/gainratio/index.html
@@ -110,15 +110,18 @@ div#output {
 </head>
 <body>
 <div id='app_container'></div>
-<script src='alm.js'></script>
+<script src="alm.js"></script>
+<script src="loeb.js"></script>
+<script src="loeb_extra.js"></script>
 <script type='text/javascript'>
 window.onload = function() {
 'use strict';
 
-App.init('app_container')
-.runtime(function(runtime) {
 
-    runtime.utils.bikedata = new Evaluator('gainRatio', {
+App.init('app_container')
+.setup(function(runtime) {
+
+    runtime.scope.bikedata = new Evaluator('gainRatio', {
         // inputs
         wheelRadius: constant(340.0),
         crankLength: constant(175.0),
@@ -131,17 +134,17 @@ App.init('app_container')
         gainRatio: (bd) => bd.at('gearRatio') * bd.at('radiusRatio')
     });
 
-    return save(runtime);
+     return runtime;
 })
 .main(function(alm) {
-    console.log(alm.utils.bikedata);
-    let el = alm.el
-      , events = alm.events;
+    console.log(alm.scope.bikedata);
+    const el = alm.el
+        , events = alm.events;
 
-    let updates = alm.mailbox(null);
+    const updates = alm.mailbox(null);
 
-    let model = updates.signal
-    .reduce(alm.utils.bikedata,
+    const model = updates.signal
+    .reduce(alm.scope.bikedata,
         (update, bd) => (update)
             ? bd.set(update.field, constant(update.value))
             : bd);
@@ -155,9 +158,9 @@ App.init('app_container')
         }));
 
     return model.map(function(bd) {
-        let data = bd.evaluate();
+        const data = bd.evaluate();
 
-        let fields = {
+        const fields = {
             'wheelRadius': 'Wheel radius (mm)',
             'crankLength': 'Crank length (mm)',
             'teethFront': 'Number of front gear teeth',
