--- a/doge.html
+++ b/doge.html
@@ -8,60 +8,35 @@
 
     <title>Doge | Gatlin Johnson</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Merriweather font -->
+    <link rel="stylesheet"
+          type="text/css"
+          href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400"
+    />
 
-    <!-- Custom styles for this template -->
-    <link href="css/jumbotron-narrow.css" rel="stylesheet">
+    <link rel="stylesheet"
+          type="text/css"
+          href="//fonts.googleapis.com/css?family=Raleway:400,700">
 
-    <!-- glyphicons -->
-    <link href="css/bootstrap-glyphicons.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet" media="all">
   </head>
 
   <body>
 
-    <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right clearfix hidden-xs">
-          <li>
-            <a href="/">Home</a>
-            </li>
-          <li>
-          <a href="mailto:gatlin@niltag.net">
-              <span class="glyphicon glyphicon-envelope"></span>
-              Send me an email!</a></li>
-          <li>
-            <a href="gatlin.gpg">PGP</a>
-          </li>
-        </ul>
-        <h3 class="text-muted">
-            <em>Veni veni veni</em>
-        </h3>
-      </div>
-      <div class="jumbotron">
-        <h1>Dogecoin address</h1>
-        <p><img src="img/doge.png" class="img-thumbnail"></p>
-        <p class="lead">
-            DLATCodc7fFHE1QuaywC9MpyrMfE8ELNk3
-        </p>
-        </p>
-        <ul class="list-group visible-xs">
-          <li class="list-group-item">
-          <a href="mailto:gatlin@niltag.net?subject=Hey there handsome">Send me an email!</a>
-          </li>
-          <li class="list-group-item">
-          <a href="gatlin.gpg">
-              PGP
-          </a>
-          </li>
-      </div>
+    <div id="main">
+        <div id="big-boy">
+            <h1>Dogecoin address</h1>
+            <p><img src="img/doge.png" class="img-thumbnail"></p>
+            <p class="lead">
+                DLATCodc7fFHE1QuaywC9MpyrMfE8ELNk3
+            </p>
+        </div>
 
-      <div class="row marketing"      <div class="footer">
-        <p>&copy; 2013. Theme lovingly stolen from other people.</p>
+      <div id="footer">
+        <p>&copy; 2013-2016 Gatlin Johnson.</p>
       </div>
 
     </div> <!-- /container -->
 
   </body>
 </html>
-
