--- a/essays/church.html
+++ b/essays/church.html
@@ -9,22 +9,17 @@
     <title>
 Lambda calculus and Church numerals
 | Gatlin Johnson</title>
-
     <!-- Merriweather font -->
     <link rel="stylesheet"
           type="text/css"
           href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
 
-    <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/jumbotron-narrow.css" rel="stylesheet">
+    <link rel="stylesheet"
+          type="text/css"
+          href="//fonts.googleapis.com/css?family=Raleway:400,700">
 
-    <!-- glyphicons -->
-    <link href="css/bootstrap-glyphicons.css" rel="stylesheet">
-
-    <link href="style.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
     <style type="text/css">
 table.sourceCode, tr.sourceCode, td.lineNumbers, td.sourceCode {
   margin: 0; padding: 0; vertical-align: baseline; border: none; }
@@ -47,31 +42,22 @@ code > span.er { font-weight: bold; }
 
   <body>
 
-    <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right clearfix hidden-xs">
-          <li>
-          <a href="mailto:gatlin@niltag.net">
-              <span class="glyphicon glyphicon-envelope"></span>
-              Send me an email!</a></li>
-          <li>
-            <a href="gatlin.gpg">PGP</a>
-          </li>
-          <li>
-              <a href="/">Home</a>
-          </li>
-        </ul>
-        <h3 class="text-muted">
-            <em>Veni veni veni</em>
-        </h3>
-      </div>
-      <hr>
-      <ol class="breadcrumb">
-          <li><a href="/">Home</a></li>
-          <li><a href="/essays/">Essays</a></li>
-      </ol>
-      <div class="page-header col-md-12 col-lg-10 col-lg-offset-1">
-        <h1>
+      <div id="main">
+          <ul id="contact-info">
+              <li>
+                  <a href="mailto:gatlin@niltag.net">
+                      <span class="glyphicon glyphicon-envelope"></span>
+                      Send me an email!</a></li>
+              <li>
+                  <a href="gatlin.gpg">PGP</a>
+              </li>
+              <li>
+                  <a href="/">Home</a> /
+                  <a href="/essays">Essays</a>
+              </li>
+          </ul>
+
+        <h1 class="essay-h1">
 Lambda calculus and Church numerals
         </h1>
         <p class="lead">
@@ -89,7 +75,7 @@ Or, DIY arithmetic
 <li><a href="#the-big-picture"><span class="toc-section-number">7</span> The Big Picture</a></li>
 </ul>
 </div>
-        </div>
+
 
       <div class="row">
         <div id="content" class="col-md-12 col-lg-10 col-lg-offset-1">
@@ -225,7 +211,7 @@ actualNumber(_2)    = 2</code></pre>
 <hr>
 
 
-      <div class="footer">
+      <div id="footer">
         <p>&copy; 2013-2016. Theme lovingly stolen from other people.</p>
       </div>
 
@@ -233,4 +219,3 @@ actualNumber(_2)    = 2</code></pre>
 
   </body>
 </html>
-
