--- a/essays/racket_monad.html
+++ b/essays/racket_monad.html
@@ -9,22 +9,17 @@
     <title>
 What the fuck is a monad?
 | Gatlin Johnson</title>
-
     <!-- Merriweather font -->
     <link rel="stylesheet"
           type="text/css"
           href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
 
-    <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/jumbotron-narrow.css" rel="stylesheet">
+    <link rel="stylesheet"
+          type="text/css"
+          href="//fonts.googleapis.com/css?family=Raleway:400,700">
 
-    <!-- glyphicons -->
-    <link href="css/bootstrap-glyphicons.css" rel="stylesheet">
-
-    <link href="style.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
     <style type="text/css">
 table.sourceCode, tr.sourceCode, td.lineNumbers, td.sourceCode {
   margin: 0; padding: 0; vertical-align: baseline; border: none; }
@@ -47,31 +42,22 @@ code > span.er { font-weight: bold; }
 
   <body>
 
-    <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right clearfix hidden-xs">
-          <li>
-          <a href="mailto:gatlin@niltag.net">
-              <span class="glyphicon glyphicon-envelope"></span>
-              Send me an email!</a></li>
-          <li>
-            <a href="gatlin.gpg">PGP</a>
-          </li>
-          <li>
-              <a href="/">Home</a>
-          </li>
-        </ul>
-        <h3 class="text-muted">
-            <em>Veni veni veni</em>
-        </h3>
-      </div>
-      <hr>
-      <ol class="breadcrumb">
-          <li><a href="/">Home</a></li>
-          <li><a href="/essays/">Essays</a></li>
-      </ol>
-      <div class="page-header col-md-12 col-lg-10 col-lg-offset-1">
-        <h1>
+      <div id="main">
+          <ul id="contact-info">
+              <li>
+                  <a href="mailto:gatlin@niltag.net">
+                      <span class="glyphicon glyphicon-envelope"></span>
+                      Send me an email!</a></li>
+              <li>
+                  <a href="gatlin.gpg">PGP</a>
+              </li>
+              <li>
+                  <a href="/">Home</a> /
+                  <a href="/essays">Essays</a>
+              </li>
+          </ul>
+
+        <h1 class="essay-h1">
 What the fuck is a monad?
         </h1>
         <p class="lead">
@@ -89,11 +75,16 @@ Or: drinking alone isn’t healthy
 <li><a href="#conclusion-and-further-points-of-interest"><span class="toc-section-number">7</span> Conclusion and further points of interest</a></li>
 </ul>
 </div>
-        </div>
+
 
       <div class="row">
         <div id="content" class="col-md-12 col-lg-10 col-lg-offset-1">
-<p><em>This post was updated from the original; feel free to send me feedback at <a href="mailto:gatlin@niltag.net">gatlin@niltag.net</a> !</em></p>
+<p><em>This post was updated from the original; feel free to send me feedback at <script type="text/javascript">
+<!--
+h='&#110;&#x69;&#108;&#116;&#x61;&#x67;&#46;&#110;&#x65;&#116;';a='&#64;';n='&#x67;&#x61;&#116;&#108;&#x69;&#110;';e=n+a+h;
+document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\/'+'a'+'>');
+// -->
+</script><noscript>&#x67;&#x61;&#116;&#108;&#x69;&#110;&#32;&#x61;&#116;&#32;&#110;&#x69;&#108;&#116;&#x61;&#x67;&#32;&#100;&#x6f;&#116;&#32;&#110;&#x65;&#116;</noscript> !</em></p>
 <p>Monads are difficult to explain without sounding condescending. There’s a lot of anxiety around the topic which compounds the already-significant barriers to entry: namely abstraction, vocabulary, and dependence on other ideas ideas you didn’t ask about.</p>
 <p>Instead, I’ll frame a problem and piece-by-piece solve the problem with what will turn out to be a monad.</p>
 <p>This post is written in <a href="http://docs.racket-lang.org/ts-guide/index.html">Typed Racket</a> which you can download for free at <a href="http://racket-lang.org">the Racket website</a>.</p>
@@ -299,7 +290,7 @@ list-even?   list-even?   list-even? -- map / unit
 <hr>
 
 
-      <div class="footer">
+      <div id="footer">
         <p>&copy; 2013-2016. Theme lovingly stolen from other people.</p>
       </div>
 
@@ -307,4 +298,3 @@ list-even?   list-even?   list-even? -- map / unit
 
   </body>
 </html>
-
