--- a/essays/recursion.html
+++ b/essays/recursion.html
@@ -9,22 +9,17 @@
     <title>
 Recursion
 | Gatlin Johnson</title>
-
     <!-- Merriweather font -->
     <link rel="stylesheet"
           type="text/css"
           href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
 
-    <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/jumbotron-narrow.css" rel="stylesheet">
+    <link rel="stylesheet"
+          type="text/css"
+          href="//fonts.googleapis.com/css?family=Raleway:400,700">
 
-    <!-- glyphicons -->
-    <link href="css/bootstrap-glyphicons.css" rel="stylesheet">
-
-    <link href="style.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
     <style type="text/css">
 table.sourceCode, tr.sourceCode, td.lineNumbers, td.sourceCode {
   margin: 0; padding: 0; vertical-align: baseline; border: none; }
@@ -47,31 +42,22 @@ code > span.er { font-weight: bold; }
 
   <body>
 
-    <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right clearfix hidden-xs">
-          <li>
-          <a href="mailto:gatlin@niltag.net">
-              <span class="glyphicon glyphicon-envelope"></span>
-              Send me an email!</a></li>
-          <li>
-            <a href="gatlin.gpg">PGP</a>
-          </li>
-          <li>
-              <a href="/">Home</a>
-          </li>
-        </ul>
-        <h3 class="text-muted">
-            <em>Veni veni veni</em>
-        </h3>
-      </div>
-      <hr>
-      <ol class="breadcrumb">
-          <li><a href="/">Home</a></li>
-          <li><a href="/essays/">Essays</a></li>
-      </ol>
-      <div class="page-header col-md-12 col-lg-10 col-lg-offset-1">
-        <h1>
+      <div id="main">
+          <ul id="contact-info">
+              <li>
+                  <a href="mailto:gatlin@niltag.net">
+                      <span class="glyphicon glyphicon-envelope"></span>
+                      Send me an email!</a></li>
+              <li>
+                  <a href="gatlin.gpg">PGP</a>
+              </li>
+              <li>
+                  <a href="/">Home</a> /
+                  <a href="/essays">Essays</a>
+              </li>
+          </ul>
+
+        <h1 class="essay-h1">
 Recursion
         </h1>
         <p class="lead">
@@ -87,7 +73,7 @@ Recursion
 <li><a href="#viola"><span class="toc-section-number">5</span> VIOLA!</a></li>
 </ul>
 </div>
-        </div>
+
 
       <div class="row">
         <div id="content" class="col-md-12 col-lg-10 col-lg-offset-1">
@@ -260,7 +246,12 @@ Recursion
 <p>And that’s what the body of <code>fact-sort-of</code> becomes.</p>
 <p><code>function-fucker</code> has an actual name. A fellow named <a href="http://en.wikipedia.org/wiki/Fixed-point_combinator">Haskell Curry</a> drummed it up, and it’s called the <strong>Y combinator</strong> (“combinator” is a fancy word for “function with one argument you ignorant pigfucker”).</p>
 <p>Its name derives from the two identical lambda functions. Cute, huh?</p>
-<p>xoxo Gatlin <a href="mailto:gatlin@niltag.net">gatlin@niltag.net</a></p>
+<p>xoxo Gatlin <script type="text/javascript">
+<!--
+h='&#110;&#x69;&#108;&#116;&#x61;&#x67;&#46;&#110;&#x65;&#116;';a='&#64;';n='&#x67;&#x61;&#116;&#108;&#x69;&#110;';e=n+a+h;
+document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\/'+'a'+'>');
+// -->
+</script><noscript>&#x67;&#x61;&#116;&#108;&#x69;&#110;&#32;&#x61;&#116;&#32;&#110;&#x69;&#108;&#116;&#x61;&#x67;&#32;&#100;&#x6f;&#116;&#32;&#110;&#x65;&#116;</noscript></p>
 <section class="footnotes">
 <hr />
 <ol>
@@ -273,7 +264,7 @@ Recursion
 <hr>
 
 
-      <div class="footer">
+      <div id="footer">
         <p>&copy; 2013-2016. Theme lovingly stolen from other people.</p>
       </div>
 
@@ -281,4 +272,3 @@ Recursion
 
   </body>
 </html>
-
