essays look better on mobile now

--- a/essays/static/index.html
+++ b/essays/static/index.html
@@ -43,7 +43,7 @@
 
       <div class="row">
           <h2 class="section-header">Computer Science</h2>
-          <div class="col-md-12 col-lg-8 col-offset-lg-2">
+          <div>
               <div class="link-block">
                   <h3><a href="twittermonad.html">
                           Wherein I implement a DSL for interacting with the
